fix: search side bar item gaps

--- a/src/assets/scss/core/components/pages/board/searchSideBar.scss
+++ b/src/assets/scss/core/components/pages/board/searchSideBar.scss
@@ -47,6 +47,8 @@
   border-radius: 5px !important;
   align-items: center;
   color: rgb(34, 51, 84);
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
   &:hover {
     background-color: rgb(229, 232, 255) !important;
   }
